# palabot

./: .gitignore  Cargo.toml  README.md
src/: db.json  main.rs
