[package]
name = "palabot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsbpal"
path = "src/main.rs"

[dependencies]
teloxide = {version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serpapi = "1.1.0"