[package]
name = "palabot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsbpal"
path = "src/main.rs"

[dependencies]
teloxide = {version = "0.12", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "hickory-dns"]}
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serpapi = "1.1.0"
# Manejo de fechas para el programador de las 00:00 [3]
chrono = { version = "0.4", features = ["serde"] }

